added test files but still need to fix them. Can connect in production. Need Developer Key every time until getting Enterprise Credentias through Box

--- a/server/serverconfig.json
+++ b/server/serverconfig.json
@@ -3,8 +3,8 @@
   "CLIENT_SECRET": "aInyr3WzN8XlOEyZYy8yptsD6siBHW5d",
 
 
-  "DEV_TOKEN": "GcDK9FKHuyJgy1MvPDJRtKDylT2z0M2Z",
+  "DEV_TOKEN": "ifV3EFPVdgLH8HPAB0vvob6DgQvpz3DO",
   "ACCESS_TOKEN": "your-access-token-here",
 
-  "REDIRECT-URI":"http://127.0.0.1:5000"
+  "REDIRECT_URI":"https://box-collab.samirrodriguez.click"
 }
